@@ -1,10 +1,10 @@
-982f63bf941a329959ce82c064b3bb61 *ChangeLog
-7964c6b207bd5f901d7e5308c79938b2 *DESCRIPTION
+0e492093bd87578a6b19d67d23c75c8b *ChangeLog
+012bdaf7ea3acf373c215e9ea353a833 *DESCRIPTION
 d72597d2556c6c7756f27e07569ee592 *NAMESPACE
 298f7e7509911b1e4dddff149d691b3c *R/antoch.test.R
 69ec36fba928c7a5156286810b3f52bd *R/chngpt.test.2.R
 6581496bf5ffbea30466bea7ea74cf11 *R/chngpt.test.R
-1b143af30250b83d6c3fc9eba1f65c4a *R/chngptm.R
+66bbcc5ed7c82b3f10233f6ed253e1cb *R/chngptm.R
 d287614094187b81a8a34874ff651450 *R/double.hinge.R
 d512512b4e6c36eff0be379a104a2c80 *R/hinge.test.R
 d02e2ee092f6df2334a37fa24aa4f5a5 *R/onAttach.R
@@ -20,7 +20,7 @@ ee6e5c17e1479c09ab44d478b43ae080 *data/dat.mtct.rda
 7f71850e2bf4527628678b688a85077b *data/nutrition.rda
 ea25138d0df2c1eada8655acc16886da *data/sim.alphas.rda
 f9794e631245db7a207f72ea834783c8 *inst/CITATION
-a85a2f2b28601975247d0a6ce8427a50 *inst/doc/chngpt-vignette.pdf
+1a2353e7a4a44218dceb3a29459b667a *inst/doc/chngpt-vignette.pdf
 82e747aa9aeaf112cb1b9113ff6d881f *inst/doc/chngpt-vignette.pdf.asis
 a616e808bd826e929f56223020649675 *inst/unitTests/Makefile
 0c12c1ada770c9626aae4253db6d4e85 *inst/unitTests/report.html
@@ -32,20 +32,20 @@ f1cc736b0ce6c48a61bf73332b7043dd *inst/unitTests/runit.chngptm.logistic.R
 d0f6e0937a1deced45007d8ac4e8036f *inst/unitTests/runit.double.hinge.R
 77c88b720624b6a4eb17bd358dd4a1af *inst/unitTests/runit.hinge.test.R
 73518f714976ae9f27ba55427a8bd314 *man/chngpt.Rd
-8b71b9356898a33614b8131940fe5d2a *man/chngpt.test.Rd
+c8d102a7c88b8c2fe9fb93bf1a7bf9a7 *man/chngpt.test.Rd
 e85112e45ec3ec4c006f27c8cb6db4a1 *man/chngptm.Rd
 462205ab73c598dd05d7dd21fd364ce7 *man/coef.0.ls.Rd
-8b5b176bf3cdd584256901ab550d9e97 *man/convert.coef.Rd
+15751ce06f882f8685ea8be5d4a92115 *man/convert.coef.Rd
 f92fcbc39bd73865cc4adcf38bb001d2 *man/dat.mtct.2.Rd
 7f97518c1443f559bfe9c319228e2933 *man/dat.mtct.Rd
-6f21c84e4274ca9452c14fefc32cebfd *man/double.hinge.Rd
-c31f9135bc74b8102ce2944ef0445b14 *man/hinge.test.Rd
+0766aadbe0b57cfff16945500bc61a4f *man/double.hinge.Rd
+c8347e7a0fa7372751c8e7ecf8313e22 *man/hinge.test.Rd
 6521193798d69a5d858da571bcc3af47 *man/lidar.Rd
 a20a29174dd5f458c33e481f86c6f379 *man/nutrition.Rd
-d2c7b5065114d59f3c1f5dcbe5b593b3 *man/performance.unit.test.Rd
+63fb6913dad5b0dec5a1fe76e910c970 *man/performance.unit.test.Rd
 636f9664697a489254e32bc51939db74 *man/sim.alphas.Rd
-db505202278c6b98713e2cfe3d5667ed *man/sim.chngpt.Rd
-cd52b673c43bcbcc22ee1b9484fbf74b *man/sim.hinge.Rd
+b4b59562f370d0e7b5d7358fcfbbbe29 *man/sim.chngpt.Rd
+25bb27060cf4ff14ce71b489b6bc1f55 *man/sim.hinge.Rd
 64fdb50fb831369de3048fb7b38be68f *man/sim.my.Rd
 d34ad817114b329fb91cdb341d383f4a *man/sim.pastor.Rd
 7a9aceb3f5609494c43291963b3c88cf *src/M10.cc
@@ -64,7 +64,7 @@ ec2eb630495c656b2ba0089270e21191 *src/datablock.h
 c1bfb8e0ffaaad2dcb9b8db81d30fb12 *src/defs.h
 62288e8cb29f90983d0ab28852cf5ba7 *src/distributions.h
 6ff33af903206802c07f51994128d028 *src/doublehinge.c
-3d65ef95b4030a8ff30b2645ee0f2832 *src/error.h
+effdd2cd8c156585c6af69ac7348805b *src/error.h
 335ac556f612dfbab5159bbc08971c46 *src/fastgrid.cc
 892194a3388d57a94304ea78559801d2 *src/fastgrid2.cc
 3569920ad91cd18a1bac025d40d8248b *src/fastgrid_helper.cc
