@@ -373,3 +373,6 @@
 
 2022-1-30
 	*  citation file format change
+
+2022-4-14
+	*  RhpcBLASctl related updates
